# midibench

./: .gitmodules  README.md  meson.build
resources/linux/: midibench.desktop
sources/: main.cpp  midibench.cpp  midibench.h  midisurface.cpp  midisurface.h  widgets.cpp  widgets.h
